src/objects/Batch__c.object
<CustomObject>
    <fields>
        <fullName>Batch_Name__c</fullName>
        <label>Batch Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Batch_Status__c</fullName>
        <label>Batch Status</label>
        <picklist>
            <picklistValues>
                <fullName>In Progress</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Committed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Number_of_Items__c</fullName>
        <label>Number of Items</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Object_Name__c</fullName>
        <description>API Name of the object of which this is a batch.</description>
        <inlineHelpText>API Name of the object of which this is a batch.</inlineHelpText>
        <label>Object Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Batch</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Batch Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Batches</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>